# veri-build

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
docs/: API.md  BACKENDS.md  CHANGES-2026-06-11.md  VERIFICATION-SKILL.md
examples/: RESULTS.md  circular_buffer.veri.md
examples/sorted_list/: example.veri.dfy.md  example.veri.f.md  example.veri.md
scripts/: check_backend.sh  compile_parent_subagent_runner.py  veri-build  veri-build-runner
skills/: VERIFICATION-SKILL.md
src/veri_build/: __init__.py  cli.py  compile.py  fill.py  lint.py  pipeline.py  spec.py
tests/: README.md  backends.py  common.py  conftest.py  test_backend_generic.py  test_completeness.py  test_health.py  test_integration.py  test_python.py  test_python_docker.py  test_scenario.py  test_spec.py
tests/integration/: README.md  __init__.py
tests/integration/fixtures/: circular_buffer.veri.md  sorted_list.fsti  sorted_list.veri.md
