[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "veri-build"
version = "0.0.2"
description = "Veri DSL spec verification pipeline: lint, fill TODOs via LLM, compile to WASM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Veri-Build Contributors"},
]

[project.scripts]
veri-build = "veri_build.cli:main"

[tool.setuptools]
# Two source roots have to land on the import path:
#   - veri_build       lives in src/
#   - backend + the loose veri_* modules live in the `dsl` submodule's own src/
# veri_build code imports those as top-level names (`from veri_ast import ...`,
# `from backend.dafny.printer import ...`), so map both roots explicitly. This
# keeps a plain `pip install -e .` working with no extra flags.
package-dir = {"" = "src/veri_build/dsl/src", "veri_build" = "src/veri_build"}
packages = [
    "veri_build",
    "backend",
    "backend.dafny",
    "backend.fstar",
    "backend.python",
]
py-modules = ["veri_ast", "veri_parser", "veri_printer", "fsti_to_veri"]
